--- a/etc/openshift/xwiki-secret.yaml
+++ b/etc/openshift/xwiki-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
-data:
-  DB_DATABASE: eHdpa2k=
-  DB_HOST: bXlzcWwteHdpa2k=
-  DB_PASSWORD: eHdpa2k=
-  DB_USER: eHdpa2k=
+stringData:
+  DB_DATABASE: xwiki
+  DB_HOST: mysql-svc
+  DB_PASSWORD: xwiki
+  DB_USER: xwiki
 kind: Secret
 metadata:
   name: xwiki-secret
