--- a/etc/openshift/mysql-secret.yaml
+++ b/etc/openshift/mysql-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
-data:
-  MYSQL_DATABASE: eHdpa2k=
-  MYSQL_PASSWORD: eHdpa2k=
-  MYSQL_ROOT_PASSWORD: eHdpa2k=
-  MYSQL_USER: eHdpa2k=
+stringData:
+  MYSQL_DATABASE: xwiki
+  MYSQL_PASSWORD: xwiki
+  MYSQL_ROOT_PASSWORD: xwiki
+  MYSQL_USER: xwiki
 kind: Secret
 metadata:
   name: mysql-secret
