--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,7 +48,8 @@ jobs:
             while true
               do
                 sleep 10
-                kubectl get deploy
                 kubectl get deploy | grep "$deploy.*\([0-9]\)/\1" && break
               done
           done
+
+        kubectl describe deploy
